
User-visible changes.

Since 0.8.0 (2007-02-28)
========================
Features
--------
* you can use an existent data file to generate coverage reports without
  having to execute your code again
* --spec-only: only consider cover code executed inside a spec
  (tested with RSpec 1.0.5, 1.0.8)

Bugfixes
--------
* workaround for bugs in Safari, IE (self-closing anchors break colorization)
* workaround for bugs in REXML shipped with 1.8.6-p110
* rethrow exceptions generated by traced scripts
* compatibility with Ruby < 1.8.5

Since 0.7.0 (2006-08-04)
========================
Features
--------
* --annotate mode, which dumps annotated source code which can be used to
  follow the control flow (very useful when reading third-party code)
* --gcc option to display uncovered lines in GCC error format
* superior Emacs support: running rcov, jumping to uncovered code, navigate
  through cross-referenced annotated code
* --[no-]validator-links

Bugfixes
--------
* differential code coverage reports work with filenames containing special
  characters
* fixed recent segfaults happening with rspec
* more care name mangling

Minor enhancements
------------------
* relevant summary values are identified using separate CSS classes 
  (microformat-style)

Since 0.6.0 (2006-06-12)
========================
Features
--------
* coverage/callsite data from multiple runs can be aggregated (--aggregate) 

Bugfixes
--------
* the SCRIPT_LINES__ workaround works better
* fixed silly bug in coverage data acquisition (line after the correct one
  marked in some situations)
* avoid problems with repeated path separators in default ignore list, based
  on rbconfig's data


Minor enhancements
------------------

Since 0.5.0 (2006-05-30)
========================
Features
--------
* differential coverage report: --text-coverage-diff (-D) and --save
  Tells you when you've added new code that was not covered by the tests and