@@ -60,6 +60,7 @@ options.report_cov_bug_for = nil
 options.aggregate_file = nil
 options.gcc_output = false
 options.show_validator_links = true
+options.charset = nil
 
 EXTRA_HELP = <<-EOF
 
@@ -235,6 +236,10 @@ EOF
         end
         options.output_threshold = threshold
     end
+    opts.on("--charset CHARSET",
+            "Charset used in Content-Type declaration of HTML reports.") do |c|
+        options.charset = c
+    end
     opts.on("--[no-]validator-links", "Add link to W3C's validation services.",
            "(default: true)") do |show_validator_links|
         options.show_validator_links = show_validator_links
@@ -370,7 +375,8 @@ make_formatter = lambda do |klass|
               :diff_cmd => options.diff_cmd,
               :comments_run_by_default => options.comments_run_by_default,
               :gcc_output => options.gcc_output,
-              :validator_links => options.show_validator_links
+              :validator_links => options.show_validator_links,
+              :charset => options.charset
              )
 end
 
